# simulation

./: .gitignore  Cargo.toml  Dockerfile  README  README.md  settings.txt
benches/: sim_mesh_bench.rs
scripts/: make_video.sh
src/: display.rs  lib.rs  main.rs  mesh.rs  scene.rs  tetrahedron.rs  utils.rs
src/ode/: euler.rs  integrator.rs  midpoint.rs  mod.rs  model.rs  null_settings.rs  rk4.rs  swappable_integrator.rs
src/simulated_scene/: base.rs  mod.rs  scene_model.rs  sim_mesh.rs
