[package]
name = "simulation"
version = "0.1.0"
authors = ["rgreenblatt <greenblattryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.23"
nalgebra = "0.20"
regex = "1.3"
clap = { git = "https://github.com/clap-rs/clap" }
alga = "0.9"
ndarray = "0.13"
