[package]
name = "simulation"
version = "0.1.0"
authors = ["rgreenblatt <greenblattryan@gmail.com>"]
edition = "2018"

[dependencies]
kiss3d = "0.23"
nalgebra = "0.20"
regex = "1.3"
clap = { git = "https://github.com/clap-rs/clap" }
alga = "0.9"
image = "0.23"

[dev-dependencies]
proptest = "0.9"
proptest-derive = "0.1"
